--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ JWT_KEY = asd123,fgh456,jkl789,zxc123,vb45
 
 ###2fqDfSuIS99po7VV
 ##asd123,fgh456,jkl789,zxc123,vb45
+
+
+
+#######mongodb+srv://Monasba_Team:<PASSWORD>@cluster0.o9rjrkt.mongodb.net/test---------الاصلى 
+#####k4tPmpLskg0YnmWL--------الباسورد الاصلى
